ChangeLog for the Qt GUI to Astrophotography

20200116:
	* eliminate SimpleImage
	* make window radius increment in steps of 10 instead of exponentially
	* use Image2Pixmap in MonitorImage
	* calibration calculator gets guide rate from mount

20200114:
	* add display of Sun and Moon to SkyDisplayWidget

20200102:
	* add Horizon to SkyDrawing and SkyDisplayWidget classes

20191227:
	* add dew heater stuff

20191226:
	* fix border of takeimagewindow
	* synchronize gain settings across different instances of the
	  ccdcontrollerwidet
	* fix bug in date display in astrobrowser

20191223:
	* fix qVariantFromValue deprecation in snowlife.cpp
	* fix background color for skydisplaywidget
	* fix bug of configuration dialog not being able to be reopened
	* add Qt5.14

20190922:
	* add Qt5.13

20190914:
	* add target marker display to SkyChartWidget
	* add target forwarding to mountcontrollerwidet
	* remove some warnings
	* fix bug in target drawing
	* fix seg fault in SkyDrawing (caused by constellation labels)
	* fix bug in SkyDisplayWidget where pointer tracking has to
	  take the rotation into account

20190913:
	* add Button for time offset to SkyDisplayWidget
	* create RotateButton and OffsetButton classes to display current
	  values

20190911:
	* add a rotation dial to SkyDisplayWidget
	* add rotation to SkyDrawing
	* fix MilkyWay outlines for certain angles

20190909:
	* fix a bug in the milkyway drawing code
	* add constellation labels
	* reimplement constellation drawing
	* fix display of milkyway
	* add pole letter display

20190908:
	* add configurable labels to astrosky
	* add --verbose to astrosky
	* fix --help option in astrosky
	* draw MilkyWay in the SkyDrawing class

20190904:
	* add tooltips (don't work when generated from QtCreator)
	* fix orientation of CalibrationDisplay
	* add Labels to guiderbuttons

20190903:
	* better buttons in calculator dialog
	* add dec rate spinbox in CalibrationCalculatorDialog